--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "react-native-reanimated": "https://github.com/software-mansion/react-native-reanimated.git#main",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-picker/picker": "^2.7.7",
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/drawer": "^6.7.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.4.0",
+    "@rneui/base": "^4.0.0-rc.8",
+    "axios": "^1.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^4.10.7",
+    "react-native-screens": "^3.32.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
